# vyper-sense

./: .env.example  .gitignore  README.md  contract_detail.py  moccasin.toml  pyproject.toml  pyvenv.cfg
agent/: config.py
agent/model/: sentiment.py
agent/services/: ai_service.py  blockchain.py  news.py  twitter.py
script/: deploy.py  run_agent.py  run_web.sh
src/: SentimentTracker.vy
web/: README.md  config-overrides.js  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.js  index.css
web/src/components/: CryptoMarketData.js  Footer.js  Navbar.js  RssFeedManager.js
web/src/pages/: Dashboard.js  SentimentAnalysis.js  TradingSignals.js  Wallet.js
web/src/utils/: Web3Context.js  api.js  cacheService.js  cryptoIcons.js  liveCoinWatchApi.js  rssService.js
