[project]
name = "vypersense"
version = "0.1.0"
description = "AI-powered cryptocurrency sentiment analysis bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "moccasin==0.3.8",
    "openai>=1.60.2",
    "pynacl>=1.5.0",
    "twikit>=2.2.2",
    "web3>=7.7.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
] 